--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,25 +5,31 @@
   />
 </div>
 
-<div class="courses">
-  <!-- <div class="course-card">
-
-        <div class="course-title">
-            Angular Core Deep Dive
-        </div>
-        <img width="300" alt="Angular Logo"
-             src="https://s3-us-west-1.amazonaws.com/angular-university/course-images/angular-core-in-depth-small.png">
-
-        <div class="course-description">
-            A detailed walk-through of the most important part of Angular - the Core and Common modules.
-        </div>
-
-    </div> -->
+<div class="courses" #getDiv>
+  <ng-template #noImage let-courseName="des">
+    <p class="warn">{{ courseName }} has no image yet</p>
+    <img src="/assets/empty-image.png" />
+  </ng-template>
 
   <course-card
+    *ngIf="courses[0] as course"
+    (courseSelected)="courseSelected($event)"
+    [course]="course"
+    [cardIndex]="1"
+    #getCourse
+    [noImagetemp]="noImage"
+  >
+    <course-image [src]="course"></course-image>
+
+    <div class="course-description">
+      {{ course?.longDescription }}
+    </div>
+  </course-card>
+
+  <!-- <course-card
     *ngFor="let course of courses; index as i"
     (courseSelected)="courseSelected($event)"
     [course]="course"
     [cardIndex]="i"
-  ></course-card>
+  ></course-card> -->
 </div>
